# python-web-project

./: README.md  pyproject.toml  requirements.txt
django_backend/: .env.example  manage.py  requirements.txt  schema.yaml
django_backend/config/: exceptions.py  settings.py  urls.py
django_backend/notifications/: admin.py  apps.py  models.py  urls.py  views.py
django_backend/store/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
django_backend/users/: jwt_utils.py  models.py  notifications.py  urls.py  views.py
fastapi_auth_service/: main.py  requirements.txt
fastapi_auth_service/core/: config.py  database.py
fastapi_auth_service/security/: dependencies.py  login_schemas.py  token.py
fastapi_auth_service/user_module/: notifications.py  user.py  user_mapper.py  user_repository.py  user_router.py  user_schemas.py  user_service.py
review_service/: .env.example  app.py  jwt_decoding.py  main.py  models.py  review_repository.py  review_service.py  routes.py  schemas.py
shared/: .env.example  config.py  jwt_decoding.py  jwt_module.py
transaction_service/: create_tables.py  main.py  models.py
transaction_service/alembic/: env.py
transaction_service/core/: logger.py
transaction_service/security/: dependencies.py  login_response.py  login_schemas.py  password_hashing.py
transaction_service/transaction_module/: transaction.py  transaction_manager.py  transaction_repository.py  transaction_router.py  transaction_schemas.py
transaction_service/user_module/: notifications.py  user.py  user_router.py  user_schemas.py  (+1 more)
(+17 files in other folders)
